force-app/main/default/objects/Contacts_on_Assessment__c/Contacts_on_Assessment__c.object-meta.xml
<CustomObject>
    <label>Contacts on Assessment</label>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Contacts on Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts on Assessment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>