force-app/main/default/objects/Contacts_on_Assessment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts on Assessment</relationshipLabel>
    <relationshipName>Contacts_on_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>