force-app/main/default/objects/Contacts_on_Assessment__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <formula>IF(INCLUDES(  Contact__r.Contact_Role__c  , &quot;Sales Primary Contact&quot;), &quot;Sales Primary Contact, &quot;, NULL) + 
IF(INCLUDES( Contact__r.Contact_Role__c, &quot;Signs Contract/Decision Maker&quot;), &quot;Signs Contract/Decision Maker, &quot;, NULL) + 
IF(INCLUDES( Contact__r.Contact_Role__c, &quot;Influencer&quot;), &quot;Influencer,  &quot;, NULL)  +
IF(INCLUDES( Contact__r.Contact_Role__c, &quot;Places Orders/CS Contact&quot;), &quot;Places Orders/CS Contact, &quot;, NULL)  +
IF(INCLUDES( Contact__r.Contact_Role__c, &quot;Pays Invoices/Billing Contact&quot;), &quot;Pays Invoices/Billing Contact, &quot;, NULL)  +
IF(INCLUDES( Contact__r.Contact_Role__c, &quot;Receives Order/Warehouse Contact&quot;), &quot;Receives Order/Warehouse Contact, &quot;, NULL) + 
IF(INCLUDES( Contact__r.Contact_Role__c, &quot;Other Administrative Contact&quot;), &quot;Other Administrative Contact,&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Role</label>
    <type>Text</type>
</CustomField>