force-app/main/default/objects/Contacts_on_Assessment__c/fields/Customer_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Assessment__c</fullName>
    <label>Customer Assessment</label>
    <referenceTo>CA_Customer_Assessment__c</referenceTo>
    <relationshipLabel>Contacts on Assessment</relationshipLabel>
    <relationshipName>Contacts_on_Assessment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>