force-app/main/default/objects/Contacts_on_Assessment__c/fields/Education_Affiliations_Previous_Position__c.field-meta.xml
<CustomField>
    <fullName>Education_Affiliations_Previous_Position__c</fullName>
    <formula>Contact__r.Education_Affiliations_Previous_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education/Affiliations/Previous Position</label>
    <type>Text</type>
</CustomField>