force-app/main/default/objects/Contacts_on_Assessment__c/fields/LinkedIn_Connections__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Connections__c</fullName>
    <formula>Contact__r.LinkedIn_Connections__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LinkedIn Connections</label>
    <type>Text</type>
</CustomField>